Fix modal jump

--- a/src/ui/units/dash/containers/Dialogs/components/PaletteBackground/PaletteBackground.scss
+++ b/src/ui/units/dash/containers/Dialogs/components/PaletteBackground/PaletteBackground.scss
@@ -41,20 +41,17 @@
                 background-color: var(--g-color-base-danger-heavy);
                 content: '';
                 position: absolute;
-                top: 1px;
-                bottom: 0;
-                left: 1px;
-                right: 0;
+                inset: 1px 0 0 1px;
             }
         }
 
         &_small {
-            width: 18px;
-            height: 18px;
+            width: 15px;
+            height: 15px;
             display: inline-flex;
 
             &::before {
-                width: 22px;
+                width: 19px;
             }
         }
 
